samples/_failures_safe/1761002267_54630d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8c7bb11.c: In function ‘main’:
./samples/SAFE/__tmp_d8c7bb11.c:153:17: error: expected declaration or statement at end of input
  153 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_d8c7bb11.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8c7bb11.c:153:17: error: expected declaration or statement at end of input
